0x02-functions_nested_loops/5-sign.c:
ign.c:16:12: error: passing argument 1 of ‘_putchar’ makes integer from pointer without a cast [-Werror=int-conversion]
   16 |   _putchar("+");
      |            ^~~
      |            |
      |            char *
In file included from 5-sign.c:1:
main.h:4:19: note: expected ‘char’ but argument is of type ‘char *’
    4 | int _putchar(char c);
      |              ~~~~~^
5-sign.c:21:12: error: passing argument 1 of ‘_putchar’ makes integer from pointer without a cast [-Werror=int-conversion]
   21 |   _putchar("0");
      |            ^~~
      |            |
      |            char *
In file included from 5-sign.c:1:
main.h:4:19: note: expected ‘char’ but argument is of type ‘char *’
    4 | int _putchar(char c);
      |              ~~~~~^
5-sign.c:26:12: error: passing argument 1 of ‘_putchar’ makes integer from pointer without a cast [-Werror=int-conversion]
   26 |   _putchar("-1");
      |            ^~~~
      |            |
      |            char *
In file included from 5-sign.c:1:
main.h:4:19: note: expected ‘char’ but argument is of type ‘char *’
    4 | int _putchar(char c);
      |              ~~~~~^
cc1: all warnings being treated as errors
